fixed findbugs warnings